Added get, update and delete for activity and equipment
