# src/main/java/hr/fer/infsus/sausc/controller/ActivityEquipmentController.java
@@ -16,14 +16,30 @@ public class ActivityEquipmentController implements ActivityEquipmentApi {
     private final ActivityEquipmentService activityEquipmentService;
 
     @Override
+    public ResponseEntity<String> apiV1ActivityActivityIdEquipmentEquipmentIdDelete(Long activityId, Long equipmentId) {
+        activityEquipmentService.deleteActivityEquipment(activityId,equipmentId);
+        return ResponseEntity.ok("Equipment with id: " + equipmentId + " deleted successfully.");
+    }
+
+    @Override
+    public ResponseEntity<EquipmentDto> apiV1ActivityActivityIdEquipmentEquipmentIdGet(Long activityId, Long equipmentId) {
+        return ResponseEntity.ok(activityEquipmentService.getActivityEquipment(activityId, equipmentId));
+    }
+
+    @Override
+    public ResponseEntity<EquipmentDto> apiV1ActivityActivityIdEquipmentEquipmentIdPut(Long activityId, Long equipmentId, EquipmentForm equipmentForm) {
+        return ResponseEntity.ok(activityEquipmentService.updateActivityEquipment(activityId, equipmentId, equipmentForm));
+    }
+
+    @Override
     public ResponseEntity<ListEquipmentDto> apiV1ActivityActivityIdEquipmentListGet(Long activityId) {
         ListEquipmentDto listEquipmentDto = new ListEquipmentDto();
-        listEquipmentDto.equipmentList(activityEquipmentService.getActivityEquipment(activityId));
+        listEquipmentDto.equipmentList(activityEquipmentService.getActivityEquipmentList(activityId));
         return ResponseEntity.ok(listEquipmentDto);
     }
 
     @Override
     public ResponseEntity<EquipmentDto> apiV1ActivityActivityIdEquipmentPost(Long activityId, EquipmentForm equipmentForm) {
-        return ResponseEntity.ok(activityEquipmentService.addEquipment(activityId,equipmentForm));
+        return ResponseEntity.ok(activityEquipmentService.addEquipment(activityId, equipmentForm));
     }
 }
